extend workshop scope