@@ -9,15 +9,16 @@
         <relativePath/>
     </parent>
     <groupId>eu.prechtel</groupId>
-    <artifactId>reciprocus</artifactId>
+    <artifactId>spring-reactive-bootcamp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>reciprocus</name>
     <description>Workshop for Spring Reactive, Security, Data and Cloud Gateway</description>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <spring-reactor-resilience4j.version>3.1.1</spring-reactor-resilience4j.version>
         <spring-cloud-dependencies.version>2023.0.1</spring-cloud-dependencies.version>
+        <argLine/>
     </properties>
 
     <dependencyManagement>
@@ -53,6 +54,15 @@
             <groupId>io.r2dbc</groupId>
             <artifactId>r2dbc-h2</artifactId>
         </dependency>
+        <!--<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo.spring3x</artifactId>
+            <version>4.12.2</version>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
@@ -97,12 +107,12 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>io.projectreactor.tools</groupId>
             <artifactId>blockhound-junit-platform</artifactId>
             <version>1.0.8.RELEASE</version>
             <scope>test</scope>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -120,12 +130,21 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>3.2.5</version>
                 <configuration>
-                    <argLine>-XX:+AllowRedefinitionToAddDeleteMethods</argLine>
+<!--                    <forkCount>0</forkCount>-->
+                    <argLine>@{argLine} -XX:+AllowRedefinitionToAddDeleteMethods -XX:+EnableDynamicAgentLoading</argLine>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.11</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
